--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [{include = "django_training_worklogger"}]
 python = "^3.10"
 black = "^22.10.0"
 django = "^4.1.3"
+prettier = "^0.0.7"
 
 
 [build-system]
